@@ -483,6 +483,7 @@ Per Starbäck                        starback@stp.lingfil.uu.se
 Peter Breitenlohner                 peb@mppmu.mpg.de
 Peter Dyballa                       peter_dyballa@web.de
 Peter Eriksson                      peter@ifm.liu.se
+Peter Evans                         peter@ixp.jp
 Peter Horst                         peter@ointment.org
 Peter Moulder                       reiter@netspace.net.au
 Peter Samuelson                     psamuels@sampo.creighton.edu
