@@ -282,6 +282,11 @@ my @Tests =
       # most others print  'WED DEC  8 07:30:00 1999'.
       {OUT_SUBST => 's/ [ 0]8.*//'},
       {OUT=>'WED DEC'}],
+
+     ['invalid-high-bit-set', "-d '\xb0'",
+      {ERR => "date: invalid date '\\260'\n"},
+      {EXIT => 1},
+     ],
     );
 
 # Repeat the cross-dst test, using Jan 1, 2005 and every interval from 1..364.
